docs: Fix Technical Analysis - clarify workspace command, RRF implementation, first-run logic, and path normalization